fix some problems in layout

--- a/Third Session/Third Session/index.html
+++ b/Third Session/Third Session/index.html
@@ -5,18 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Users/melika/Downloads/assets/style/default.css">
-    <link media="(min-width:640px)" rel="stylesheet" href="/Users/melika/Downloads/assets/style/tablet.css">
-    <link media="(min-width:1024px)" rel="stylesheet" href="/Users/melika/Downloads/assets/style/desktop.css">
+    <link rel="stylesheet" href="./assets/style/default.css">
+    <link media="(min-width:640px)" rel="stylesheet" href="./assets/style/tablet.css">
+    <link media="(min-width:1024px)" rel="stylesheet" href="./assets/style/desktop.css">
 
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div>
-          <div class="intro">
-            <img src="/Users/melika/Downloads/assets/images/login_img02.png" alt="logo" />
-          </div>
+          <div class="intro"></div>
           <div class="form">
             <h1>Welcome!</h1>
             <form  action="#">
